tests/error/subtractInteger-wrong-1st-argument-bytestring.uplc
(program 1.0.0[[(builtin subtractInteger)(con bytestring #AFD3)](con integer 10)])